--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body[data-aos-delay='3300'] [data-aos],
+[data-aos][data-aos][data-aos-delay='3300'] {
+  transition-delay: 3300ms;
+}
+
+body[data-aos-delay='3500'] [data-aos],
+[data-aos][data-aos][data-aos-delay='3500'] {
+  transition-delay: 3500ms;
+}
